fixed wordwrap

--- a/water-usage-main/src/Brand.css
+++ b/water-usage-main/src/Brand.css
@@ -97,9 +97,14 @@
 }
 
 .brandContainer {
+    
     padding: 20px;
     height: 100%;
     width: 380px;
+}
+
+.nameContainer {
+    white-space: nowrap;
 }
 
 #shop {
